labs/lab-6-assets/overlays/cluster3/mongo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mongo
  namespace: mongo
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  host: mongocluster3route
  port:
    targetPort: 27017
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: mongo
    weight: 100
